Creating a way2 method, that uses method reference